--- a/css/style.css
+++ b/css/style.css
@@ -315,6 +315,18 @@ box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2) inset;
     text-shadow: 1px 1px 3px rgba(0,0,0,0.4);
 }
 
+@media only screen and (max-width: 600px) {
+    #headquarter .container {
+        margin-left: 15px;
+        max-width: 600px;
+        flex-direction: column;
+    }
+    .headquarter-gallery img {
+        width: 100px;
+        height: auto;
+    }
+
+}
 
 /* FORM & TABLE */
 
@@ -411,6 +423,21 @@ table {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
     border: 1px solid #b3b3b3;
+}
+
+@media only screen and (max-width: 600px) {
+    #form-table .container {
+        margin-left: 15px;
+        max-width: 600px;
+        flex-direction: column;
+    }
+    .form {
+        margin-left: -5px;
+        margin-right: 5px;
+        display: flex;
+        justify-content: center;
+    }
+
 }
 
 /* FOOTER */
